[gd_scene load_steps=4 format=3 uid="uid://ladjpfd0okxd"]

[ext_resource type="Script" uid="uid://bytprrpsyx1tg" path="res://enemies/enemy_spawner.gd" id="1_mjbfh"]
[ext_resource type="PackedScene" uid="uid://dif4grrfalpcq" path="res://enemies/default_enemy.tscn" id="2_531ly"]

[sub_resource type="Curve2D" id="Curve2D_agn4h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 570)
}
point_count = 2

[node name="EnemySpawner" type="Node"]
script = ExtResource("1_mjbfh")
enemy_scenes = Array[PackedScene]([ExtResource("2_531ly")])

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_agn4h")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
unique_name_in_owner = true
position = Vector2(1280, 0)
rotation = 1.5708

[node name="EnemySpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
